fix bag in main.css .message-display p overflow-y

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -77,8 +77,9 @@ body {
     background-color: #333;
     /* border-color:orange; */
 }
+
 .message-display p {
-    overflow-y: auto;
+    /* overflow-y: auto; */
     min-height: 4vh;
     max-height: 60vh;
 }
